tests/ui/extend/extend_zero_field.stderr
error: Struct has no fields
 --> tests/ui/extend/extend_zero_field.rs:4:1
  |
4 | #[extend(usize)]
  | ^

error: Struct has no fields
 --> tests/ui/extend/extend_zero_field.rs:8:1
  |
8 | #[extend(usize)]
  | ^

error: Struct has no fields
  --> tests/ui/extend/extend_zero_field.rs:12:1
   |
12 | #[extend(usize)]
   | ^

error: Struct has no fields
  --> tests/ui/extend/extend_zero_field.rs:16:1
   |
16 | struct NamedZeroNoAttr {}
   | ^^^^^^

error: Struct has no fields
  --> tests/ui/extend/extend_zero_field.rs:19:1
   |
19 | struct UnnamedZeroNoAttr();
   | ^^^^^^

error: Struct has no fields
  --> tests/ui/extend/extend_zero_field.rs:22:1
   |
22 | struct UnitZeroNoAttr;
   | ^^^^^^
